[tool.poetry]
name = "robologs"
version = "0.1.1a20"
description = "robologs is an open source library of containerized data transformations for the robotics and drone communities"
authors = ["roboto.ai <info@roboto.ai>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.2"
numpy = "^1.23.1"
opencv-python = "^4.5.0.0"
pyyaml = "^6.0"
tqdm = "^4.64.1"
bagpy = "^0.5"
rosbags = "^0.9.13"
click = "^8.1.3"
pydantic = "^1.10.2"
boto3 = "^1.26.26"
pytest = "^7.2.0"

[tool.poetry.scripts]
robologs = "robologs.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
