[tool.poetry]
name = "robologs"
version = "0.1.1a21"
description = "robologs is an open source library of containerized data transformations for the robotics and drone communities"
authors = ["roboto.ai <info@roboto.ai>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.2"
numpy = "^1.23.1"
opencv-python = "^4.5.0.0"
pyyaml = "^6.0"
tqdm = "^4.64.1"
bagpy = "^0.5"
rosbags = "^0.9.13"
click = "^8.1.3"
pydantic = "^1.10.2"
boto3 = "^1.26.26"
pytest = "^7.2.0"
pytest-datafiles = "^2.0.1"
nose = "^1.3.7"
types-tqdm = "^4.64.7.9"
black = {extras = ["d"], version = "^22.12.0"}
isort = "^5.11.2"

[tool.poetry.scripts]
robologs = "robologs.cli:main"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^6.5.0"}
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = ["robologs/**/*.py"]
namespace_packages = true
show_error_codes = true
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | tests
    | docs
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
